@@ -2,6 +2,7 @@
 
   - Default timeout to None. This allows the plugin to differentiate
     from a lack of a timeout given to a 0 timeout.
+  - Ranges with more than two parts are invalid. [GH-1]
 
 ## 0.1.1 (August 1, 2011)
 
